Fix width of first section on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -572,8 +572,9 @@ body {
     background-size: contain;
     background-position: 50% 0;
     margin-top: -170px;
-    padding-top: 80px;
+    padding: 80px 15px 0;
     position: relative;
+    max-width: 330px;
   }
   .statistics {
     .money {
